[server] prep AnomalyMetricsProvider namespacing (#1468)